# git-main

./: CMakeLists.txt
app/coder-test/src/: DefaultGrammar.cpp  DefaultGrammar.hpp  Makefile.am  lexer_inc.cpp  lexer_inc.hpp  main.cpp  test_001.cpp  test_001.hpp  test_002.cpp  test_002.hpp  test_003.cpp  test_003.hpp  test_004.cpp  test_004.hpp  test_005.cpp  test_005.hpp  test_006.cpp  test_006.hpp  test_007.cpp  test_007.hpp  test_008.cpp  test_008.hpp  test_009.cpp  test_009.hpp  test_010.cpp  test_010.hpp  test_011.cpp  test_011.hpp  test_012.cpp  test_012.hpp  test_013.cpp  test_013.hpp  test_014.cpp  test_014.hpp  test_015.cpp  test_015.hpp  test_016.cpp  test_016.hpp  test_017.cpp  test_017.hpp  (+34 more)
app/coder/src/: EbnfGrammar.cpp  EbnfGrammar.hpp  Makefile.am  main.cpp
app/fxmon/: CMakeLists.txt  LICENSE.txt  Makefile  fxmon.service  monitor.ini
app/fxmon/nbproject/: configurations.xml  project.xml
app/fxmon/old/: MonConsoleHandlerPlugin.hpp  MonEngine.cpp  MonFXCMSession.hpp  MonHistoryPriceSession.cpp  MonNotificationPlugin.hpp  MonPriceGeneratorSession.cpp  MonPriceGeneratorSession.hpp  MonSession.hpp  MonitorApp.cpp  MonitorApp.hpp  MonitorIni.cpp
app/fxmon/src/: GetHistoryPrices.cpp  GetHistoryPrices.hpp  GetMarketOffers.cpp  GetMarketOffers.hpp  GetOffersPrices.cpp  GetOffersPrices.hpp  HistdatacomReader.cpp  HistdatacomReader.hpp  HistoryFxcmliveReader.cpp  HistoryFxcmliveReader.hpp  HistoryPricesGetter.cpp  HistoryPricesGetter.hpp  HistoryPricesReader.cpp  HistoryPricesReader.hpp  Makefile  MarketPlugin4backtest.cpp  MarketPlugin4backtest.hpp  MarketPlugin4fxcm.cpp  MarketPlugin4fxcm.hpp  MonConsoleHandlerPlugin.cpp  MonConsoleHandlerPlugin.hpp  MonEngine.cpp  MonEngine.hpp  MonFXCMSession.cpp  MonHistoryPriceSession.hpp  MonNotificationPlugin.cpp  MonQuoteUpdateTimeoutPlugin.cpp  MonQuoteUpdateTimeoutPlugin.hpp  MonSession.cpp  MonitorApp.cpp  MonitorApp.hpp  MonitorIni.cpp  MonitorIni.hpp  OMPEngine.cpp  OMPEngine.hpp  OffersReader.cpp  OffersReader.hpp  RealEngine.cpp  RealEngine.hpp  RunEngine.cpp  (+10 more)
app/fxmon/vcbuild/: fxmon.sln  fxmon.vcproj  postbuild.bat
app/test/: CMakeLists.txt
app/test/src/: main.cpp
lib/fxcmAdapter/: CMakeLists.txt  LICENSE.txt  Makefile
lib/fxcmAdapter/nbproject/: configurations.xml  project.xml
lib/fxcmAdapter/old/: fxcmHistory.cpp  fxcmHistory.hpp  fxcmIniParams.cpp  fxcmIniParams.hpp  fxcmMarketPlugin.cpp  fxcmMarketPlugin.hpp  fxcmOrderMonitor.cpp  fxcmOrderMonitor.hpp  fxcmPermission.cpp  fxcmPermission.hpp  fxcmPipCost.cpp  fxcmPipCost.hpp  fxcmResponseListener.cpp  fxcmResponseListener.hpp  fxcmSession.cpp  fxcmSession.hpp  fxcmSessionHelper.cpp  fxcmSessionHelper.hpp  fxcmSessionListener.cpp  fxcmSessionListener.hpp  fxcmTradingSettings.cpp  fxcmTradingSettings.hpp
lib/fxcmAdapter/src/: ErrorCodes.cpp  ErrorCodes.hpp  HistoryPrice.cpp  HistoryPrice.hpp  HistoryPricesPrinter.cpp  HistoryPricesUpdater.cpp  HistoryPricesUpdater.hpp  IniParams.cpp  IniParams.hpp  LoginParams.cpp  LoginParams.hpp  Makefile  Offer.cpp  Offer.hpp  OfferCollection.cpp  OfferCollection.hpp  OffersPrinter.cpp  OffersPrinter.hpp  OffersUpdater.cpp  OffersUpdater.hpp  OffersWriter.cpp  OffersWriter.hpp  OrderMonitor.cpp  OrderMonitor.hpp  PipCost.cpp  PipCost.hpp  ResponseListener.cpp  ResponseListener.hpp  ResponseListener4EntryOrders.cpp  ResponseListener4EntryOrders.hpp  ResponseListener4FindingOrders.cpp  ResponseListener4FindingOrders.hpp  ResponseListener4HistoryPrices.cpp  ResponseListener4HistoryPrices.hpp  ResponseListener4MarketOrders.cpp  ResponseListener4MarketOrders.hpp  ResponseListener4Offers.cpp  ResponseListener4Offers.hpp  ResponseListener4Orders.cpp  ResponseListener4Orders.hpp  (+32 more)
lib/fxcmAdapter/vcbuild/: fxcmAdapter.vcproj
lib/misc/: CMakeLists.txt  Makefile  configure.ac
lib/misc/nbproject/: Package-Default.bash  configurations.xml  project.xml
lib/misc/slick/: libmisc.vpj  libmisc.vpw
lib/misc/src/: Makefile  Makefile.am  algobase.hpp  algorithm.hpp  audit.cpp  audit.hpp  autocritical_section.cpp  autocritical_section.hpp  autoptr.hpp  bistream.cpp  bistream.hpp  bostream.cpp  calendar.cpp  calendar.hpp  cpu_timer.cpp  cpu_timer.hpp  critical_section.cpp  critical_section.hpp  date.hpp  debug.hpp  deque.hpp  event.cpp  event.hpp  exception.cpp  exception.hpp  filename.cpp  filename.hpp  functional.hpp  generic_array.hpp  generic_string.hpp  iniserv.cpp  iniserv.hpp  iterator.hpp  list.hpp  math.hpp  memmanip.hpp  memory.hpp  multi_lock.cpp  multi_lock.hpp  mutex.cpp  (+27 more)
lib/misc/vcbuild/: misc.vcproj
lib/misctest/: CMakeLists.txt  configure.ac
lib/misctest/nbproject/: Package-Default.bash  configurations.xml  project.xml
lib/misctest/slick/: misctest.vpj
lib/misctest/src/: Makefile  Makefile.am  misctest.cpp  misctest_util.hpp  test_algorithm.cpp  test_algorithm.hpp  test_autocritical_section.cpp  test_autocritical_section.hpp  test_autoptr.cpp  test_autoptr.hpp  test_bistream.hpp  test_bostream.cpp  test_critical_section.cpp  test_critical_section.hpp  test_deque.cpp  test_deque.hpp  test_event.cpp  test_event.hpp  test_exception.cpp  test_exception.hpp  test_filename.cpp  test_filename.hpp  test_functional.cpp  test_functional.hpp  test_generic_array.cpp  test_generic_array.hpp  test_generic_string.cpp  test_generic_string.hpp  test_list.cpp  test_list.hpp  test_multi_lock.cpp  test_multi_lock.hpp  test_mutex.cpp  test_mutex.hpp  test_numeric.cpp  test_numeric.hpp  test_priority_queue.cpp  test_priority_queue.hpp  test_queue.cpp  test_queue.hpp  (+16 more)
lib/misctest/vcbuild/: misctest.sln  misctest.vcproj
lib/stl/: CMakeLists.txt  LICENSE.txt
lib/stl/src/: algobase.hpp  algorithm.hpp  autoptr.hpp  basic_string.hpp  deque.hpp  exception.cpp  exception.hpp  functional.hpp  iterator.hpp  list.hpp  memmanip.hpp  memory.hpp  (+9 more)
lib/stltest/: CMakeLists.txt
lib/sys/: CMakeLists.txt
lib/systest/: CMakeLists.txt
tutorial/c++11/: CMakeLists.txt  README.txt
tutorial/c++14/: CMakeLists.txt  README.txt
tutorial/cplusplus_11/: CMakeLists.txt  README.txt
tutorial/dennis_ritchie_c/: CMakeLists.txt  README.txt
(+6829 files in other folders)
