bin_PROGRAMS = codertest
codertest_SOURCES = main.cpp DefaultGrammar.cpp coder_inc.cpp test_gen.cpp \
	test_001.cpp test_002.cpp test_003.cpp test_004.cpp test_005.cpp \
	test_006.cpp test_007.cpp test_008.cpp test_009.cpp test_010.cpp \
	test_011.cpp test_012.cpp test_013.cpp test_014.cpp test_015.cpp \
	test_016.cpp test_017.cpp test_018.cpp test_019.cpp test_020.cpp \
	test_021.cpp 

codertest_CFLAGS=-g -O
codertest_CXXFLAGS=-g -O
codertest_CPPFLAGS=-g -O -I./ -I../../../lib/k1/src -I../../coder/src
CFLAGS=
CXXFLAGS=
CPPFLAGS=

codertest_LDFLAGS=-lk1 -lm -L../../../lib/k1/src