cmake_minimum_required(VERSION 3.2)
project(Winsock1.1 CXX)

add_executable(01_accept			01_accept.cpp)
add_executable(02_bind				02_bind.cpp)
add_executable(03_closesocket		03_closesocket.cpp)
add_executable(04_connect			04_connect.cpp)
add_executable(05_freeaddrinfo		05_freeaddrinfo.cpp)
add_executable(06_gai_strerror		06_gai_strerror.cpp)
add_executable(07_getaddrinfo		07_getaddrinfo.cpp)
add_executable(07_getaddrinfo_2		07_getaddrinfo_2.cpp)
add_executable(08_gethostbyaddr		08_gethostbyaddr.cpp)
add_executable(09_gethostbyname		09_gethostbyname.cpp)
add_executable(10_gethostname		10_gethostname.cpp)
add_executable(11_getnameinfo		11_getnameinfo.cpp)
add_executable(12_getipv4sourcefilter	12_getipv4sourcefilter.cpp)
add_executable(13_getpeername		13_getpeername.cpp)
add_executable(14_getprotobyname	14_getprotobyname.cpp)
add_executable(14_getprotobynumber	14_getprotobynumber.cpp)
add_executable(15_getservbyname		15_getservbyname.cpp)
add_executable(16_getservbyport		16_getservbyport.cpp)
add_executable(17_getsockname		17_getsockname.cpp)
add_executable(18_getsockopt		18_getsockopt.cpp)
add_executable(18_getsockopt_2		18_getsockopt_2.cpp)
add_executable(19_getsourcefilter	19_getsourcefilter.cpp)
add_executable(20_htond				20_htond.cpp)
add_executable(21_htonf				21_htonf.cpp)
add_executable(22_htonl				22_htonl.cpp)
add_executable(23_htonll			23_htonll.cpp)
add_executable(24_htons				24_htons.cpp)
add_executable(25_inet_addr			25_inet_addr.cpp)
add_executable(26_inet_ntoa			26_inet_ntoa.cpp)
add_executable(26_inet_pton			26_inet_pton.cpp)
add_executable(27_ioctlsocket		27_ioctlsocket.cpp)
add_executable(28_listen			28_listen.cpp)
add_executable(29_ntohd				29_ntohd.cpp)
add_executable(30_ntohf				30_ntohf.cpp)
add_executable(31_ntohl				31_ntohl.cpp)
add_executable(32_ntohll			32_ntohll.cpp)
add_executable(33_ntohs				33_ntohs.cpp)
add_executable(34_recv				34_recv.cpp)
add_executable(35_recvfrom			35_recvfrom.cpp)
add_executable(36_select			36_select.cpp)
add_executable(37_send				37_send.cpp)
add_executable(38_sendto			38_sendto.cpp)
add_executable(39_setipv4sourcefilter	39_setipv4sourcefilter.cpp)
add_executable(40_setsockopt		40_setsockopt.cpp)
add_executable(41_setsourcefilter	41_setsourcefilter.cpp)
add_executable(42_shutodwn			42_shutodwn.cpp)
add_executable(43_socket			43_socket.cpp)

target_link_libraries(01_accept				PRIVATE Ws2_32.lib)
target_link_libraries(02_bind				PRIVATE Ws2_32.lib)
target_link_libraries(03_closesocket		PRIVATE Ws2_32.lib)
target_link_libraries(04_connect			PRIVATE Ws2_32.lib)
target_link_libraries(05_freeaddrinfo		PRIVATE Ws2_32.lib)
target_link_libraries(06_gai_strerror		PRIVATE Ws2_32.lib)
target_link_libraries(07_getaddrinfo		PRIVATE Ws2_32.lib)
target_link_libraries(07_getaddrinfo_2		PRIVATE Ws2_32.lib)
target_link_libraries(08_gethostbyaddr		PRIVATE Ws2_32.lib)
target_link_libraries(09_gethostbyname		PRIVATE Ws2_32.lib)
target_link_libraries(10_gethostname		PRIVATE Ws2_32.lib)
target_link_libraries(11_getnameinfo		PRIVATE Ws2_32.lib)
target_link_libraries(12_getipv4sourcefilter	PRIVATE Ws2_32.lib)
target_link_libraries(13_getpeername		PRIVATE Ws2_32.lib)
target_link_libraries(14_getprotobyname		PRIVATE Ws2_32.lib)
target_link_libraries(14_getprotobynumber	PRIVATE Ws2_32.lib)
target_link_libraries(15_getservbyname		PRIVATE Ws2_32.lib)
target_link_libraries(16_getservbyport		PRIVATE Ws2_32.lib)
target_link_libraries(17_getsockname		PRIVATE Ws2_32.lib)
target_link_libraries(18_getsockopt			PRIVATE Ws2_32.lib)
target_link_libraries(18_getsockopt_2		PRIVATE Ws2_32.lib)
target_link_libraries(19_getsourcefilter	PRIVATE Ws2_32.lib)
target_link_libraries(20_htond				PRIVATE Ws2_32.lib)
target_link_libraries(21_htonf				PRIVATE Ws2_32.lib)
target_link_libraries(22_htonl				PRIVATE Ws2_32.lib)
target_link_libraries(23_htonll				PRIVATE Ws2_32.lib)
target_link_libraries(24_htons				PRIVATE Ws2_32.lib)
target_link_libraries(25_inet_addr			PRIVATE Ws2_32.lib)
target_link_libraries(26_inet_ntoa			PRIVATE Ws2_32.lib)
target_link_libraries(26_inet_pton			PRIVATE Ws2_32.lib)
target_link_libraries(27_ioctlsocket		PRIVATE Ws2_32.lib)
target_link_libraries(28_listen				PRIVATE Ws2_32.lib)
target_link_libraries(29_ntohd				PRIVATE Ws2_32.lib)
target_link_libraries(30_ntohf				PRIVATE Ws2_32.lib)
target_link_libraries(31_ntohl				PRIVATE Ws2_32.lib)
target_link_libraries(32_ntohll				PRIVATE Ws2_32.lib)
target_link_libraries(33_ntohs				PRIVATE Ws2_32.lib)
target_link_libraries(34_recv				PRIVATE Ws2_32.lib)
target_link_libraries(35_recvfrom			PRIVATE Ws2_32.lib)
target_link_libraries(36_select				PRIVATE Ws2_32.lib)
target_link_libraries(37_send				PRIVATE Ws2_32.lib)
target_link_libraries(38_sendto				PRIVATE Ws2_32.lib)
target_link_libraries(39_setipv4sourcefilter	PRIVATE Ws2_32.lib)
target_link_libraries(40_setsockopt			PRIVATE Ws2_32.lib)
target_link_libraries(41_setsourcefilter	PRIVATE Ws2_32.lib)
target_link_libraries(42_shutodwn			PRIVATE Ws2_32.lib)
target_link_libraries(43_socket				PRIVATE Ws2_32.lib)
