# CMakeLists.txt file for 20.7.1_unique_ptr


add_executable(01_create 01_create.cpp)
add_executable(02_unique_ownership 02_unique_ownership.cpp)
add_executable(03_reset 03_reset.cpp)
add_executable(04_not_copyable 04_not_copyable.cpp)
add_executable(05_transfer_ownership 05_transfer_ownership.cpp)
add_executable(06_release 06_release.cpp)
