# This is the CMakeLists.txt for 30.3_threads samples.

find_package (Threads REQUIRED)

add_executable(01_start_fcn_pointer 01_start_fcn_pointer.cpp)
add_executable(02_start_fcn_object 02_start_fcn_object.cpp)
add_executable(03_start_lambda 03_start_lambda.cpp)
add_executable(04_start_variadic 04_start_variadic.cpp)
add_executable(05_join 05_join.cpp)
add_executable(06_detach 06_detach.cpp)
add_executable(07_join_illegal 07_join_illegal.cpp)
add_executable(08_detach_illegal 08_detach_illegal.cpp)
add_executable(09_terminate_illegal 09_terminate_illegal.cpp)
add_executable(10_raii 10_raii.cpp)
add_executable(11_argument_by_value 11_argument_by_value.cpp)
add_executable(12_invalid_stack_address 12_invalid_stack_address.cpp)
add_executable(13_invalid_pointer 13_invalid_pointer.cpp)
add_executable(14_const_reference 14_const_reference.cpp)
add_executable(15_stdref 15_stdref.cpp)
add_executable(16_start_nonstatic_memfn 16_start_nonstatic_memfn.cpp)
add_executable(17_start_static_memfn 17_start_static_memfn.cpp)
add_executable(18_sleep_for 18_sleep_for.cpp)
add_executable(19_sleep_until 19_sleep_until.cpp)


target_link_libraries(01_start_fcn_pointer ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(02_start_fcn_object ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(03_start_lambda ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(04_start_variadic ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(05_join ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(06_detach ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(07_join_illegal ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(08_detach_illegal ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(09_terminate_illegal ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(10_raii ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(11_argument_by_value ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(12_invalid_stack_address ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(13_invalid_pointer ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(14_const_reference ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(15_stdref ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(16_start_nonstatic_memfn ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(17_start_static_memfn ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(18_sleep_for  ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(19_sleep_until  ${CMAKE_THREAD_LIBS_INIT})
