# CMakeLists.txt for 02_generalized_return_type_deduction

add_executable(01_lambda_single_return    01_lambda_single_return.cpp)
add_executable(02_lambda_multiple_returns 02_lambda_multiple_returns.cpp)
add_executable(03_all_functions           03_all_functions.cpp)
add_executable(04_recursive_functions     04_recursive_functions.cpp)
