# CMakeLists.txt file for 07.2_enumeration_declarations

add_executable(01_enum_classes  01_enum_classes.cpp)
add_executable(02_scoped_enumeration  02_scoped_enumeration.cpp)
add_executable(03_no_implicit_conversion  03_no_implicit_conversion.cpp)
add_executable(04_forward_declaration  04_forward_declaration.cpp)
add_executable(05_set_size_of_enum  05_set_size_of_enum.cpp)
